--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
+html,
+body {
+    height: 100%;
+    overflow: hidden;
+}
+
+body {
+    margin: 0;
+    font: 16px sans-serif;
+}
+
 header {
     text-align: center;
     background: #370a42;
