--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,9 @@ footer {
 .game .player {
     position: absolute;
     margin-left: -20px;
+    margin-bottom: +15px;
     width: 40px;
+    height: 30px;
 }
 
 @keyframes scroll-background {
