--- a/css/main.css
+++ b/css/main.css
@@ -62,3 +62,9 @@ footer {
         background-position-y: 256px;
     }
 }
+
+.game .enemy {
+    position: absolute;
+    width: 40px;
+    height: 30px;
+}
