--- a/css/main.css
+++ b/css/main.css
@@ -68,3 +68,10 @@ footer {
     width: 40px;
     height: 30px;
 }
+
+.game .laser {
+    position: absolute;
+    margin-left: -3px;
+    margin-top: -20px;
+    height: 30px;
+}
