--- a/css/main.css
+++ b/css/main.css
@@ -75,9 +75,16 @@ footer {
     height: 30px;
 }
 
-.game .laser {
+.game .playerlaser {
     position: absolute;
     margin-left: -3px;
     margin-top: -20px;
+    height: 30px;
+}
+
+.game .enemylaser {
+    position: absolute;
+    margin-left: 17px;
+    margin-top:21px;
     height: 30px;
 }
