Improve basic POST and GET functionality for high scores

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,16 @@ footer {
     display: none;
 }
 
+.btnBox {
+    height: 50px;
+    margin-top: 30px;
+}
+
+#restartBtn {
+    display: block;
+    margin: auto;
+}
+
 #highscores {
     display: block;
 }
