--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ footer {
     display: none;
 }
 
-.game .player{
+.game .player {
     position: absolute;
     margin-left: -20px;
     margin-bottom: +15px;
@@ -77,13 +77,18 @@ footer {
     height: 30px;
 }
 
-.player .spaceship{
+.game .playerDashboard {
+    position: absolute;
+    margin-left: 850px;
+}
+
+.player .spaceship {
     position: absolute;
     width: 40px;
     height: 30px;
 }
 
-.player .damage{
+.player .damage {
     position: absolute;
     width: 40px;
     height: 30px;
