WIP: Move game engine to backend

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,7 @@
 @import "./screen/Onboarding/LobbyScreen.css";
 @import "./screen/Onboarding/WelcomeScreen.css";
 @import "./component/Invader/Invader.css";
-@import "./component/Hero/Hero.css";
+@import "./component/Player/Player.css";
 @import "./component/Laser/Laser.css";
 
 
